<resources>
    <string name="app_name">Inventory</string>
    <string name="action_add_products">Add Dummy Products</string>
    <string name="name">Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="supplier_name">Supplier Name:</string>
    <string name="supplier_phone">Supplier Phone:</string>
    <string name="product_image_desc">Image</string>
    <string name="sale_button_desc">Sale Button Image</string>
    <string name="store_image_desc">Store Image</string>
    <string name="empty_view_title">Your store looks empty&#8230;</string>
    <string name="empty_view_subtitle">Start by adding a product.</string>
    <string name="currency">$</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="product_activity_title_new_product">Add a Product</string>
    <string name="product_activity_title_edit_product">Edit Product</string>
    <string name="action_delete_all_products">Delete All Products</string>
    <string name="insert_product_failed">Error with saving product</string>
    <string name="insert_product_successful">Product saved</string>
    <string name="update_product_failed">Error with updating product</string>
    <string name="update_product_successful">Product updated</string>

    <!-- Dialog button text for the option to keep editing the current product [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Toast message in editor when current product was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="delete_product_successful">Product deleted</string>

    <!-- Toast message in editor when current product has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="delete_product_failed">Error with deleting product</string>

    <!-- Dialog message to ask the user to confirm deleting the current product [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this product?</string>

    <!-- Dialog button text for the option to confirm deleting the current product [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current product [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for 'TBD' [CHAR LIMIT=20] -->
    <string name="tbd">TBD</string>

    <string name="out_of_stock">Product is out of stock.</string>
    <string name="order_more">Order more</string>
    <string name="no_supplier_phone">No Supplier Phone</string>
    <string name="missing_fields">Please enter information to all fields.</string>
</resources>
