<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical"
    tools:context="com.alperencan.inventory.android.activity.ProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Name label -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/name" />

        <!-- Name field -->
        <EditText
            android:id="@+id/edit_product_name"
            style="@style/FieldStyle"
            android:hint="@string/name"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Image URL label -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/product_image_desc" />

        <!-- Image URL field -->
        <EditText
            android:id="@+id/edit_product_image_uri"
            style="@style/FieldStyle"
            android:hint="@string/product_image_desc"
            android:inputType="textUri" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Quantity label -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/quantity" />

        <LinearLayout
            style="@style/FieldStyle"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/action_subtract_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_action_subtract" />

                <!-- Quantity field -->
                <EditText
                    android:id="@+id/edit_product_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:hint="@string/quantity"
                    android:inputType="number"
                    android:textAlignment="center" />

                <ImageButton
                    android:id="@+id/action_add_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_action_add" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/action_order"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/order_more" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Price label -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/price" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <!-- Units for currency ($) -->
            <TextView
                style="@style/UnitsStyle"
                android:text="@string/currency" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="number"
                android:paddingStart="@dimen/activity_margin" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Price label -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/supplier_name" />

        <!-- Image URL field -->
        <EditText
            android:id="@+id/edit_supplier_name"
            style="@style/FieldStyle"
            android:hint="@string/supplier_name"
            android:inputType="textUri" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Price label -->
        <TextView
            style="@style/LabelStyle"
            android:text="@string/supplier_phone" />

        <!-- Image URL field -->
        <EditText
            android:id="@+id/edit_supplier_phone"
            style="@style/FieldStyle"
            android:hint="@string/supplier_phone"
            android:inputType="phone" />
    </LinearLayout>

</LinearLayout>
